--- a/IRKit/IRKitResources/ja.lproj/IRNewPeripheralScene2ViewController.strings
+++ b/IRKit/IRKitResources/ja.lproj/IRNewPeripheralScene2ViewController.strings
@@ -1,6 +1,7 @@
 
 /* Class = "IBUILabel"; text = "Put iOS device next to IRKit"; ObjectID = "138"; */
-"138.text" = "Put iOS device next to IRKit";
+"138.text" = "IRKitの隣にiPhone
+を置いてください";
 
 /* Class = "IBUIButton"; normalTitle = " Done"; ObjectID = "kln-H0-Byk"; */
-"kln-H0-Byk.normalTitle" = " Done";
+"kln-H0-Byk.normalTitle" = " 完了";
