--- a/IRKit/IRKitResources/ja.lproj/IRWifiEditViewController.strings
+++ b/IRKit/IRKitResources/ja.lproj/IRWifiEditViewController.strings
@@ -1,3 +1,3 @@
 
-/* Class = "IBUILabel"; text = "Tell IRKit Wifi credentials to join"; ObjectID = "REr-lY-lZo"; */
+/* Class = "IBUILabel"; text = "Enter your home WiFi information"; ObjectID = "REr-lY-lZo"; */
 "REr-lY-lZo.text" = "家のWiFiの情報を入力してください";
