--- a/IRKit/IRKitResources/ja.lproj/IRWifiEditViewController.strings
+++ b/IRKit/IRKitResources/ja.lproj/IRWifiEditViewController.strings
@@ -1,3 +1,3 @@
 
-/* Class = "IBUILabel"; text = "Enter your home WiFi information"; ObjectID = "REr-lY-lZo"; */
-"REr-lY-lZo.text" = "家のWiFiの情報を入力してください";
+/* Class = "IBUILabel"; text = "Enter your home Wi-Fi information"; ObjectID = "REr-lY-lZo"; */
+"REr-lY-lZo.text" = "家のWi-Fiの情報を入力してください";
